--- a/index.html
+++ b/index.html
@@ -31,8 +31,9 @@
             <ul class="pure-menu-list">
                 <li class="pure-menu-item pure-menu-selected"><a href="#" class="pure-menu-link">Home</a></li>
                 <li class="pure-menu-item"><a href="pages/page_1.html" class="pure-menu-link">Page 1</a></li>
-                <li class="pure-menu-item"><a href="pages/page_2.html" class="pure-menu-link">Page 2</a></li>
-                <li class="pure-menu-item"><a href="pages/doggone.html" class="pure-menu-link">Doggone</a></li>
+                <li class="pure-menu-item"><a href="pages/pure.html" class="pure-menu-link">Pure</a></li>
+                <li class="pure-menu-item"><a href="pages/dog.html" class="pure-menu-link">Dog</a></li>
+                <li class="pure-menu-item"><a href="pages/pwa.html" class="pure-menu-link">PWA</a></li>
 				<li class="pure-menu-item"><a href="pages/about.html" class="pure-menu-link">About</a></li>
             </ul>
         </div>
@@ -45,6 +46,12 @@
         </div>
 
         <div class="content">
+            <h2 class="content-subhead">PureDogPWA is a mash up of three things</h2>
+            <ol>
+                <li>Pure CSS responsive template at <a href="https://purecss.io">purecss.io</a>. This means it resizes and simply works regardless of the screen size, device, or browser.</li>
+                <li>Doggone Minimal Website (DMW) at <a href="https://github.com/crrdlx/doggone-minimal-website">github.com/crrdlx/doggone-minimal-website</a>. This means it always looks good and loads fast.</li>
+                <li>SimplePWA template at <a href="https://simplepwa.com">simplepwa.com</a>. This means it can be installed on your device as a Progressive Web App. That's good because (1) it takes very little storage space on your device, (2) it looks, acts, and feels like a regular app, (3) updates are instantaneous, and (4) you don't need to rely on an app store.</li>
+            </ol>
             <h2 class="content-subhead">How to use this layout</h2>
             <p>
                 To use this layout, you can just copy paste the HTML, along with the CSS in <a href="/css/layouts/side-menu.css" alt="Side Menu CSS">side-menu.css</a>, and the JavaScript in <a href="/js/ui.js">ui.js</a>. The JS file uses vanilla JavaScript to simply toggle an <code>active</code> class that makes the menu responsive.
