--- a/pages/about.html
+++ b/pages/about.html
@@ -33,8 +33,9 @@
             <ul class="pure-menu-list">
                 <li class="pure-menu-item"><a href="../index.html" class="pure-menu-link">Home</a></li>
                 <li class="pure-menu-item"><a href="page_1.html" class="pure-menu-link">Page 1</a></li>
-                <li class="pure-menu-item"><a href="page_2.html" class="pure-menu-link">Page 2</a></li>
-                <li class="pure-menu-item"><a href="doggone.html" class="pure-menu-link">Doggone</a></li>
+                <li class="pure-menu-item"><a href="pure.html" class="pure-menu-link">Pure</a></li>
+                <li class="pure-menu-item"><a href="dog.html" class="pure-menu-link">Dog</a></li>
+                <li class="pure-menu-item"><a href="pwa.html" class="pure-menu-link">PWA</a></li>
                 <li class="pure-menu-item pure-menu-selected"><a href="about.html" class="pure-menu-link">About</a></li>
             </ul>
         </div>
