--- a/pages/dog.html
+++ b/pages/dog.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="A layout example with a side menu that hides on mobile, just like the Pure website.">
-    <title>Doggone page</title>
+    <title>Dog page</title>
     
     <link rel="stylesheet" href="https://unpkg.com/purecss@1.0.0/build/pure-min.css" integrity="sha384-" crossorigin="anonymous">
     
@@ -33,8 +33,9 @@
             <ul class="pure-menu-list">
                 <li class="pure-menu-item"><a href="../index.html" class="pure-menu-link">Home</a></li>
                 <li class="pure-menu-item"><a href="page_1.html" class="pure-menu-link">Page 1</a></li>
-                <li class="pure-menu-item"><a href="page_2.html" class="pure-menu-link">Page 2</a></li>
-                <li class="pure-menu-item pure-menu-selected"><a href="doggone.html" class="pure-menu-link">Doggone</a></li>
+                <li class="pure-menu-item"><a href="pure.html" class="pure-menu-link">Pure</a></li>
+                <li class="pure-menu-item pure-menu-selected"><a href="dog.html" class="pure-menu-link">Dog</a></li>
+                <li class="pure-menu-item"><a href="pwa.html" class="pure-menu-link">PWA</a></li>
                 <li class="pure-menu-item"><a href="about.html" class="pure-menu-link">About</a></li>
             </ul>
         </div>
@@ -42,7 +43,7 @@
 
     <div id="main">
         <div class="header">
-            <h1>Doggone</h1>
+            <h1>Doggone Minimal Website</h1>
             <h2>An installable Progressive Web App (PWA) responsive website that looks good on desktop, tablet, or mobile.</h2>
         </div>
 
