--- a/pages/pure.html
+++ b/pages/pure.html
@@ -33,8 +33,9 @@
             <ul class="pure-menu-list">
                 <li class="pure-menu-item"><a href="../index.html" class="pure-menu-link">Home</a></li>
                 <li class="pure-menu-item"><a href="page_1.html" class="pure-menu-link">Page 1</a></li>
-                <li class="pure-menu-item pure-menu-selected"><a href="page_2.html" class="pure-menu-link">Page 2</a></li>
-                <li class="pure-menu-item"><a href="doggone.html" class="pure-menu-link">Doggone</a></li>
+                <li class="pure-menu-item pure-menu-selected"><a href="pure.html" class="pure-menu-link">Pure</a></li>
+                <li class="pure-menu-item"><a href="dog.html" class="pure-menu-link">Dog</a></li>
+                <li class="pure-menu-item"><a href="pwa.html" class="pure-menu-link">PWA</a></li>
 				<li class="pure-menu-item"><a href="about.html" class="pure-menu-link">About</a></li>
             </ul>
         </div>
@@ -42,14 +43,14 @@
 
     <div id="main">
         <div class="header">
-            <h1>Page 2</h1>
+            <h1>Pure CSS</h1>
             <h2>An installable Progressive Web App (PWA) responsive website that looks good on desktop, tablet, or mobile.</h2>
         </div>
 
         <div class="content">
-            <h2 class="content-subhead">How to use this layout</h2>
+            <h2 class="content-subhead">This is Pure CSS stuff</h2>
             <p>
-                To use this layout, you can just copy paste the HTML, along with the CSS in <a href="/css/layouts/side-menu.css" alt="Side Menu CSS">side-menu.css</a>, and the JavaScript in <a href="/js/ui.js">ui.js</a>. The JS file uses vanilla JavaScript to simply toggle an <code>active</code> class that makes the menu responsive.
+                Pure CSS makes the web app look and feel like a real, native, downloaded onto your phone or device app. Except that this PWA is much, much smaller.
             </p>
 
             <h2 class="content-subhead">Now Let's Speak Some Latin</h2>
