--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
     <div id="menu">
         <div class="pure-menu">
-            <a class="pure-menu-heading" href="#">Site Name</a>
+            <a class="pure-menu-heading" href="#">Pure Dog PWA</a>
 
             <ul class="pure-menu-list">
                 <li class="pure-menu-item pure-menu-selected"><a href="#" class="pure-menu-link">Home</a></li>
