--- a/pages/about.html
+++ b/pages/about.html
@@ -36,7 +36,7 @@
                 <li class="pure-menu-item"><a href="pure.html" class="pure-menu-link">Pure</a></li>
                 <li class="pure-menu-item"><a href="dog.html" class="pure-menu-link">Dog</a></li>
                 <li class="pure-menu-item"><a href="pwa.html" class="pure-menu-link">PWA</a></li>
-                <li class="pure-menu-item pure-menu-selected"><a href="about.html" class="pure-menu-link">About</a></li>
+                <li class="pure-menu-item pure-menu-selected"><a href="about.html" class="pure-menu-link">About page</a></li>
             </ul>
         </div>
     </div>
