--- a/pages/pure.html
+++ b/pages/pure.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="A layout example with a side menu that hides on mobile, just like the Pure website.">
-    <title>Page 2</title>
+    <title>Pure page</title>
     
     <link rel="stylesheet" href="https://unpkg.com/purecss@1.0.0/build/pure-min.css" integrity="sha384-" crossorigin="anonymous">
     
@@ -43,7 +43,7 @@
 
     <div id="main">
         <div class="header">
-            <h1>Pure CSS</h1>
+            <h1>Pure CSS page</h1>
             <h2>An installable Progressive Web App (PWA) responsive website that looks good on desktop, tablet, or mobile.</h2>
         </div>
 
