small instruction added

--- a/index.html
+++ b/index.html
@@ -43,6 +43,9 @@
         <div class="header">
             <h1>PureDogPWA</h1>
             <h2>An installable Progressive Web App (PWA) responsive website that looks good on desktop, tablet, or mobile. It just works.</h2>
+        <p>
+            Take this as a template it, customize it as your own.
+        </p>
         </div>
 
         <div class="content">
