--- a/index.html
+++ b/index.html
@@ -51,18 +51,20 @@
         <div class="content">
             <h2 class="content-subhead">PureDogPWA is a mash up of three things</h2>
             <ol>
-                <li>Pure CSS responsive template at <a href="https://purecss.io">purecss.io</a>. This means it resizes and simply works regardless of the screen size, device, or browser.</li>
+                <li>Pure CSS responsive template at <a href="https://purecss.io">PureCSS.io</a>. This means it resizes and simply works regardless of the screen size, device, or browser.</li>
                 <li>Doggone Minimal Website (DMW) at <a href="https://github.com/crrdlx/doggone-minimal-website">github.com/crrdlx/doggone-minimal-website</a>. This means it always looks good and loads fast.</li>
                 <li>SimplePWA template at <a href="https://simplepwa.com">simplepwa.com</a>. This means it can be installed on your device as a Progressive Web App. That's good because (1) it takes very little storage space on your device, (2) it looks, acts, and feels like a regular app, (3) updates are instantaneous, and (4) you don't need to rely on an app store.</li>
             </ol>
-            <h2 class="content-subhead">How to use this layout</h2>
+            <h2 class="content-subhead">How to use this website template</h2>
+            <p>
+                Grab the code from <a href="https://github.com/crrdlx/doggone-minimal-website">github.com/crrdlx/doggone-minimal-website</a>. You can either...
+            </p>
+            <ul>
+                <li>Clone the repository from GitHub above (choose "Code", then "Clone"), or</li>
+                <li>Download the zip folder with all the files in it (choose "Code", then "Download ZIP").</li>
+            </ul>
             <p>
                 To use this layout, you can just copy paste the HTML, along with the CSS in <a href="/css/layouts/side-menu.css" alt="Side Menu CSS">side-menu.css</a>, and the JavaScript in <a href="/js/ui.js">ui.js</a>. The JS file uses vanilla JavaScript to simply toggle an <code>active</code> class that makes the menu responsive.
-            </p>
-
-            <h2 class="content-subhead">Now Let's Speak Some Latin</h2>
-            <p>
-                This website can be installed on your device as a Progressive Web App (PWA). Look for the "install" button in the URL address bar. Or, on mobile, download the app to your home screen. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
             </p>
 
             <div class="pure-g">
