fixed refresh button

--- a/pages/dog.html
+++ b/pages/dog.html
@@ -87,8 +87,8 @@
                 <a href="javascript:document.location.reload();"
                 ONMOUSEOVER="window.status='Refresh'; return true"
                 ONMOUSEOUT="window.status='ah... that was good'">
-                <center><img src="img/refresh.png" 
-                width="85" height="" border="0" /></a></center>
+                <center><img src="../img/refresh.png" 
+                width="65" height="" border="0" /></a></center>
                 <p>
 
             <h3 id="and-guess-what-freaker">And guess what, friend:</h3>
