--- a/pages/pure.html
+++ b/pages/pure.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="A layout example with a side menu that hides on mobile, just like the Pure website.">
     <title>Pure page</title>
-    
+    <link rel="manifest" href="../manifest.json">
     <link rel="stylesheet" href="https://unpkg.com/purecss@1.0.0/build/pure-min.css" integrity="sha384-" crossorigin="anonymous">
         <!--[if lte IE 8]>
             <link rel="stylesheet" href="../css/layouts/side-menu-old-ie.css">
@@ -46,7 +46,7 @@
 
         <div class="content">
             <h1 id="pure-page">The <span style="color:firebrick">Pure CSS </span>page.</h1>
-            <h2 class="content-subhead">Pure CSS is a toolbox of html, css, and js</h2>
+            <h2>Pure CSS is a toolbox of html, css, and js</h2>
             <p>
                 Pure CSS makes the web app look and feel like a real, native, downloaded onto your phone or device app. Except that this PWA is much, much smaller.
             </p>
@@ -62,7 +62,7 @@
                 </div>
             </div>
 
-            <h2 class="content-subhead">Try Resizing your Browser</h2>
+            <h2>Try Resizing your Browser</h2>
             <p>
                 If you haven't done so yet, try resizing your browser. Watch how the navigation controls change. That's the "responsive" part of Pure CSS which makes it neat and useful.
             </p>
