editing the about page

--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
         <div class="content">
             <h2>PureDogPWA is a mash up of three things</h2>
             <ol>
-                <li>Pure CSS responsive template at <a href="https://purecss.io">PureCSS.io</a>. This means it resizes and simply works regardless of the screen size, device, or browser.</li>
-                <li>Doggone Minimal Website (DMW) at <a href="https://github.com/crrdlx/doggone-minimal-website">github.com/crrdlx/doggone-minimal-website</a>. This means it always looks good and loads fast.</li>
-                <li>SimplePWA template at <a href="https://simplepwa.com">SimplePWA.com</a>. This means it can be installed on your device as a Progressive Web App (PWA). That's good.</li>
+                <li><b>Pure CSS</b> responsive template at <a href="https://purecss.io">PureCSS.io</a>. This means it resizes and simply works regardless of the screen size, device, or browser.</li>
+                <li><b>Doggone Minimal Website</b> (DMW) at <a href="https://github.com/crrdlx/doggone-minimal-website">github.com/crrdlx/doggone-minimal-website</a>. This means it always looks good and loads fast.</li>
+                <li><b>SimplePWA</b> template at <a href="https://simplepwa.com">SimplePWA.com</a>. This means it can be installed on your device as a Progressive Web App (PWA). That's good.</li>
             </ol>
             <h2>How to use this website template</h2>
             <p>
