--- a/pages/about.html
+++ b/pages/about.html
@@ -46,35 +46,21 @@
 
         <div class="content">
             <h1 id="about-page">The <span style="color:firebrick">About </span>page.</h1>
-            <h2>How to use this layout</h2>
+            <h2>About PureDogPWA</h2>
             <p>
-                To use this layout, you can just copy paste the HTML, along with the CSS in <a href="/css/layouts/side-menu.css" alt="Side Menu CSS">side-menu.css</a>, and the JavaScript in <a href="/js/ui.js">ui.js</a>. The JS file uses vanilla JavaScript to simply toggle an <code>active</code> class that makes the menu responsive.
+                If you got this far, you should already know that PureDogPWA consists of three things:
+            </p>
+            <ol>
+                <li><b>Pure CSS</b> responsive template at <a href="https://purecss.io">PureCSS.io</a>. This means it resizes and simply works regardless of the screen size, device, or browser.</li>
+                <li><b>Doggone Minimal Website</b> (DMW) at <a href="https://github.com/crrdlx/doggone-minimal-website">github.com/crrdlx/doggone-minimal-website</a>. This means it always looks good and loads fast.</li>
+                <li><b>SimplePWA</b> template at <a href="https://simplepwa.com">SimplePWA.com</a>. This means it can be installed on your device as a Progressive Web App (PWA). That's good.</li>
+            </ol>
+
+            <h2>About crrdlx</h2>
+            <p>
+                Call me "CR" for short. I create stuff. See what I've done at <a href="https://hive.blog/@crrdlx/about" target="_blank">hive.blog/@crrdlx/about</a>. There's a lot of random, and often silly and embarassing stuff there. I draw, write, animate, sing poorly, blog, run bots, make NFTs, and probably more.
             </p>
 
-            <h2>Now Let's Speak Some Latin</h2>
-            <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-            </p>
-
-            <div class="pure-g">
-                <div class="pure-u-1-4">
-                    <img class="pure-img-responsive" src="../img/100percent.png" alt="100 percent">
-                </div>
-                <div class="pure-u-1-4">
-                    <img class="pure-img-responsive" src="../img/abacus.png" alt="Abacus">
-                </div>
-                <div class="pure-u-1-4">
-                    <img class="pure-img-responsive" src="../img/chick.png" alt="Chick">
-                </div>
-                <div class="pure-u-1-4">
-                    <img class="pure-img-responsive" src="../img/starburst.png" alt="Starburst">
-                </div>
-            </div>
-
-            <h2>Try Resizing your Browser</h2>
-            <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-            </p>
         </div>
     </div>
 </div>
