--- a/pages/pure.html
+++ b/pages/pure.html
@@ -64,7 +64,7 @@
 
             <h2>Try Resizing your Browser</h2>
             <p>
-                If you haven't done so yet, try resizing your browser. Watch how the navigation controls change. That's the "responsive" part of Pure CSS which makes it neat and useful.
+                If you haven't done so yet, try resizing your browser. Watch how things like the navigation controls and images change. That's the "responsive" part of Pure CSS which makes it neat and useful.
             </p>
         </div>
     </div>
