--- a/index.html
+++ b/index.html
@@ -94,6 +94,11 @@
 
 
 <script src="js/ui.js"></script>
+<script>
+    if (typeof navigator.serviceWorker !== 'undefined') {
+      navigator.serviceWorker.register('sw.js')
+    }
+  </script>
 
 </body>
 </html>
